--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,13 +24,14 @@
       <ion-list-header>
         <ion-label>Resources</ion-label>
       </ion-list-header>
-      <ion-item href="#">
+      <ion-item button routerLink='/pointofsales'>
         <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>CodeApps Documentation</ion-label>
+        <ion-label>Point of Sales</ion-label>
       </ion-item>
-      <ion-item href="#">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
+      <ion-item button routerLink='/pos-table'>
+        <ion-icon slot="start" color="medium" name="restaurant"></ion-icon>
+        <ion-label>Point of Sales </ion-label>
+        <ion-badge slot="end" color="danger">New</ion-badge>
       </ion-item>
       <ion-item href="#">
         <ion-icon slot="start" color="medium" name="grid"></ion-icon>
