--- a/src/app/pointofsales/tableorder/tableorder.component.html
+++ b/src/app/pointofsales/tableorder/tableorder.component.html
@@ -21,17 +21,47 @@
   </ion-toolbar> 
   
 
-<ion-content class="content_back">
-    
-<div class="drop_back">
+<ion-content >
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
+  <section class="content_back">
+    <!-- <ion-button (click)="testPrintModal()">test print</ion-button> -->
+  <ion-segment [(ngModel)]="selectType" color="primary" style="background: #fff;">
+    <ion-segment-button value="Table">
+      <ion-label>Tables</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="Room">
+      <ion-label>Rooms</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+ 
+ <div [ngSwitch]="selectType" style="height: 100%;">
+  
+ <div *ngSwitchDefault class="drop_back">
     <ion-grid>
+      <ng-container *ngFor="let item of tabDetail">
         <ion-row >
-          <ion-col *ngFor="let item of tabDetail" size='2.4'>
-            <ion-button expand="full" [color]="item.BillNo != 0 ? 'success' : 'light'" (click)="selectTableDetail(item)">
-              {{item.TableDetails_Name}}
+          <ion-col size='12'>
+            <span class="spn-text">
+              <span>{{item.TableName}}</span>
+            </span>
+          </ion-col>
+        
+        </ion-row>
+        <ion-row >
+          <ion-col size='2.4' *ngFor="let tab of item.child">
+              
+            <ion-button 
+            expand="full" 
+            [color]="tab.BillNo != 0 ? 'success' : 'light'"
+             (click)="selectTableDetail(tab)">
+              {{tab.TableDetails_Name}}
             </ion-button>
           </ion-col>
         </ion-row>
+      </ng-container>
       </ion-grid>
 
     <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
@@ -41,4 +71,19 @@
         </ion-infinite-scroll-content>
       </ion-infinite-scroll>
  </div>
+
+ <div *ngSwitchCase="'Room'" class="drop_back">
+  <ion-grid>
+    <ion-row >
+      <ion-col *ngFor="let room of roomSource;let i = index" size='2.4'>
+        <ion-button expand="full" [color]="room.BillNo != 0 ? 'success' : 'light'" (click)="roomClick(room, i)">
+          {{room.Room_No}}
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+ </div>
+
+</div>
+</section>
 </ion-content>
