--- a/src/app/pointofsales/dialogue-bill/dialogue-bill.component.html
+++ b/src/app/pointofsales/dialogue-bill/dialogue-bill.component.html
@@ -155,7 +155,7 @@
   </div>
 </ion-content>
 
-<ion-footer>
+<ion-footer *ngIf="!showSettled">
   <ion-toolbar>
     <ion-button expand='full'  color='tertiary' (click)="getBillSerice();showSettled = true">
       Bill Settlement
