--- a/src/app/print/bill-print/bill-print.component.html
+++ b/src/app/print/bill-print/bill-print.component.html
@@ -83,6 +83,13 @@
                   <td>{{item.IssuesSub_Amt}}</td>
               </tr>
           </tbody>
+          <tfoot>
+              <tr>
+                  <th class="ion-text-start" colspan="2">Total</th>
+                  <th class="ion-text-start" colspan="2">{{onTotalQty()}}</th>
+                  <th class="ion-text-start" >{{onTotalAmount()}}</th>
+              </tr>
+          </tfoot>
       </table>
   </div>
 </div>
