--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu type="overlay">
+    <ion-menu type="overlay" swipeGesture='false'>
       <!-- <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
