--- a/src/app/booking/room-register/room-register.component.html
+++ b/src/app/booking/room-register/room-register.component.html
@@ -34,6 +34,6 @@
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="roomRegModal()" [disabled]="!disable">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="checkmark"></ion-icon>
     </ion-fab-button>
   </ion-fab>
