--- a/src/app/modal-page/room-settlement/room-settlement.component.html
+++ b/src/app/modal-page/room-settlement/room-settlement.component.html
@@ -19,6 +19,36 @@
 
 <ion-content>
   <ion-list lines='none'>
+
+    <ion-card>
+      <ion-item button (click)="roomView = !roomView">
+        <ion-label>
+          Table List
+        </ion-label>
+        <ion-button fill='clear' color="medium" slot="end" >
+          <ion-icon slot="icon-only" name="apps"></ion-icon>
+        </ion-button>
+      </ion-item>
+      <ng-container *ngIf="roomView">
+        <ion-item button *ngFor="let room of roomSource" lines='full'>
+          <ion-checkbox slot="start" [(ngModel)]="room.checked"
+           (ionChange)="selectRM($event, room)"></ion-checkbox>
+          <ion-label class="ion-text-wrap">
+            <ion-text color="primary">
+              <h3>{{room.RoomType_Name}}</h3>
+            </ion-text>
+            <p>Room No: {{room.Room_No}}</p>
+            <ion-text color="danger">
+              <p>Floor: {{room.Floor_NoRooms}}</p>
+            </ion-text>
+          </ion-label>
+          <ion-text color="primary">
+            <p>₹&nbsp;{{room.Rate}}</p>
+          </ion-text>
+        </ion-item>
+      </ng-container>
+    </ion-card>
+
     <ion-card>
       <ion-item color="medium">
         <ion-label>Check In Date</ion-label>
@@ -44,18 +74,18 @@
       </ion-item>
 
       <ion-item lines='full'>
-        <ion-label>Restorunt Total</ion-label>
+        <ion-label>Restarunt Total</ion-label>
         <p></p>
       </ion-item>
 
       <ion-item lines='full'>
         <ion-label>Hotel Total</ion-label>
-        <p></p>
+        <p>{{roomsMain?.netAmount}}</p>
       </ion-item>
 
       <ion-item lines='full'>
         <ion-label>Net Amount</ion-label>
-        <p>₹&nbsp;{{roomsMain?.Rate | number : '1.2-2'}}</p>
+        <p>₹&nbsp;{{roomsMain?.netAmount | number : '1.2-2'}}</p>
       </ion-item>
 
     </ion-card>
@@ -63,7 +93,7 @@
     <ion-card>
       <ion-item color="tertiary">
         <ion-label>Bill Type</ion-label>
-        <ion-select>
+        <ion-select [(ngModel)]="roomsMain.billsericeID">
           <ion-select-option *ngFor="let item of billserice" [value]="item.BillSerId">
             {{item.BillSerPrefix}}
           </ion-select-option>
@@ -72,7 +102,7 @@
 
       <ion-item color="tertiary">
         <ion-label>Payment</ion-label>
-        <ion-select>
+        <ion-select [(ngModel)]="roomsMain.payTerms">
           <ion-select-option value="CASH">CASH</ion-select-option>
           <ion-select-option value="CARD">CARD</ion-select-option>
           <ion-select-option value="CREDIT">CREDIT</ion-select-option>
@@ -81,19 +111,20 @@
 
       <ion-item color="tertiary">
         <ion-label>Discount</ion-label>
-        <ion-input type='number'></ion-input>
+        <ion-input type='number' debounce='300' (ionChange)='fngetTaxableAmout()' [(ngModel)]="roomsMain.discount">
+        </ion-input>
       </ion-item>
     </ion-card>
 
-    <ion-card >
+    <ion-card>
       <ion-item class="ion-text-center">
-        <ion-label>Total:&nbsp;₹&nbsp;{{roomsMain?.Rate | number : '1.2-2'}}</ion-label>
+        <ion-label>Total:&nbsp;₹&nbsp;{{roomsMain?.totalAmount | number : '1.2-2'}}</ion-label>
       </ion-item>
       <ion-item class="ion-text-center">
         <ion-label>Advance:&nbsp;₹&nbsp;{{roomsMain?.Registration_AdvanceAmt | number : '1.2-2'}}</ion-label>
       </ion-item>
       <ion-item class="ion-text-center">
-        <ion-label color="success">Balance:&nbsp;₹&nbsp;{{roomsMain?.Rate - roomsMain?.Registration_AdvanceAmt | number : '1.2-2'}}</ion-label>
+        <ion-label color="success">Balance:&nbsp;₹&nbsp;{{roomsMain?.billAmount | number : '1.2-2'}}</ion-label>
       </ion-item>
     </ion-card>
 
@@ -103,7 +134,7 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button fill='clear' expand='block' color="success">
+    <ion-button fill='clear' expand='block' (click)="fnsaveBill()" color="success">
       Check Out
     </ion-button>
   </ion-toolbar>
