--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,12 @@
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
+
+      <ion-footer>
+        <ion-toolbar color="dark">
+          <ion-title>{{hostName}}</ion-title>
+        </ion-toolbar>
+      </ion-footer>
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
   </ion-split-pane>
