--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,11 +26,11 @@
       </ion-list-header>
       <ion-item button routerLink='/pointofsales'>
         <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Point of Sales</ion-label>
+        <ion-label>KOT Billing</ion-label>
       </ion-item>
       <ion-item button routerLink='/pos-table'>
         <ion-icon slot="start" color="medium" name="restaurant"></ion-icon>
-        <ion-label>Point of Sales </ion-label>
+        <ion-label>Direct Billing (POS)</ion-label>
         <ion-badge slot="end" color="danger">New</ion-badge>
       </ion-item>
       <ion-item href="#">
