--- a/src/app/modal-page/payment/payment.component.html
+++ b/src/app/modal-page/payment/payment.component.html
@@ -33,8 +33,12 @@
 
   <ion-card>
     <ion-item lines='none'>
-      <ion-badge slot="start" color="danger">₹&nbsp;{{main.paid | number : '1.2-2'}}</ion-badge>
-      <ion-label slot="end">Amount</ion-label>
+      <ion-label >Amount: 
+     <ion-text color="success">
+      <p>₹&nbsp;{{main.paid | number : '1.2-2'}}</p>
+     </ion-text>
+      </ion-label>
+      
       <ion-button (click)="showlist = !showlist" fill='clear' slot="end" color="medium">
         <ion-icon name="apps" slot="icon-only"></ion-icon>
       </ion-button>
